--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: "rohanchandra/type-theme"
+  github: "scalixtro/AzureConceptos"
   gitter:
   google_plus:
   instagram:
