--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-baseurl: "/type-theme"
-url: "https://rohanchandra.github.io/"
+baseurl: "/AzureConceptos"
+url: "https://scalixtro.github.io/"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
