--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://scalixtro.github.io/"
 theme_settings:
   # Meta
   title: Cloud Surfers
-  avatar: https://i.imgur.com/dNYe0HS.png
+  avatar: https://i.imgur.com/n6hV34U.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
   description: "A website with blog posts and pages" # used by search engines
