--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ theme_settings:
   avatar: https://i.imgur.com/n6hV34U.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
-  description: "A website with blog posts and pages" # used by search engines
+  description: "Summer Cloud (Acordeón)" # used by search engines
 
   # Header and footer text
   header_text: >
-     <p>Reto 1. Máster </p>
+     <h1>Reto 1. Máster </h1>
 
      <p>Conceptos fundamentales de Azure</p>
   header_text_feature_image:
