--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ theme_settings:
   header_text: >
      <h1>Reto 1. Máster </h1>
 
-     <p>Conceptos fundamentales de Azure</p>
+     <h2>Conceptos fundamentales de Azure</h2>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/rohanchandra/type-theme">Type Theme</a>
